--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,12 +12,12 @@ jobs:
       # Check out https://docs.github.com/en/actions/using-jobs/using-a-matrix-for-your-jobs#expanding-or-adding-matrix-configurations
       # for details on matrix strategies.
       matrix:
-        port: 8080
         service: [bore.pub, bore.selfhosted, localhost.run]
         include:
           - service: bore.selfhosted
             selfHostedEndpoint: "localhost"
             fallback: [bore.pub]
+          - port: 8080
 
     steps:
       - uses: actions/checkout@v3
