--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,7 @@ jobs:
 
       - uses: actions/setup-node@v3
         with:
-          node-version: 18 # 18.12.0
-          cache: npm
+          node-version: 18
 
       - name: Starting a simple node.js http-server in the background
         run: |
