Point to main.js instead of index.js

--- a/action.yml
+++ b/action.yml
@@ -26,9 +26,9 @@ outputs:
     description: "The timestamp on the message that was posted into Slack when using bot token"
 runs:
   # using: "node16"
-  # main: "src/index.js"
+  # main: "src/main.js"
   using: "composite"
   steps:
-    - uses: actions/checkout@v3
-    - run: node src/index.js
+    # - uses: actions/checkout@v3
+    - run: node src/main.js
       shell: bash
