--- a/action.yml
+++ b/action.yml
@@ -25,12 +25,17 @@ outputs:
   ts: # timestamp of message posted
     description: "The timestamp on the message that was posted into Slack when using bot token"
 runs:
-  # using: "node16"
-  # main: "src/main.js"
   using: "composite"
   steps:
-    # Start the tunneling process in the background.
-    - run: node dist/index.js &
+    - run: |
+        # We manually set the input since we are using a composite step.
+        export INPUT_SERVICE=${{ inputs.service }}
+        export INPUT_PORT=${{ inputs.port }}
+        export INPUT_SELFHOSTEDENDPOINT=${{ inputs.selfHostedEndpoint }}
+        export INPUT_FALLBACK=${{ inputs.fallback }}
+        export INPUT_BLOCKING=${{ inputs.blocking }}
+        # Start the tunneling process in the background.
+        node dist/index.js &
       shell: bash
 
     # Wait for it to have set the tunnel url and be done.
