Store tunnel-url in output from actions.yml

--- a/action.yml
+++ b/action.yml
@@ -40,5 +40,5 @@ runs:
     # Wait for it to have set the tunnel url and be done.
     - run: |
         timeout 30s bash -c 'until [ -f ./.tunnel-is-ready ]; do sleep 1; echo "Waiting for ./.tunnel-is-ready to be ready..."; done;'
-        ls ./
+        echo "tunnel-url=$(cat ./resources/.tunnel-url)" >>$GITHUB_OUTPUT
       shell: bash
