--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,11 +12,12 @@ jobs:
       # Check out https://docs.github.com/en/actions/using-jobs/using-a-matrix-for-your-jobs#expanding-or-adding-matrix-configurations
       # for details on matrix strategies.
       matrix:
-        service: [bore.pub, bore.selfhosted, localhost.run]
+        service: [bore.pub]
+        # service: [bore.pub, bore.selfhosted, localhost.run]
         include:
-          - service: bore.selfhosted
-            selfHostedEndpoint: "localhost"
-            fallback: [bore.pub]
+          # - service: bore.selfhosted
+          #   selfHostedEndpoint: "localhost"
+          #   fallback: [bore.pub]
           - port: 8080
 
     steps:
