Ensure pre-commit is run

--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "test": "INPUT_SERVICE=bore.pub INPUT_PORT=8080 node src/main.js",
     "test:localhost.run": "INPUT_SERVICE=localhost.run INPUT_PORT=8080 node src/main.js",
     "prepare": "husky install",
-    "pre-commit": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -27,5 +26,10 @@
   "devDependencies": {
     "@vercel/ncc": "0.34.0",
     "husky": "^8.0.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run build"
+    }
   }
 }
