--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ncc build src/main.js --license licenses.txt",
     "test": "INPUT_SERVICE=bore.pub INPUT_PORT=8080 node src/main.js",
     "test:localhost.run": "INPUT_SERVICE=localhost.run INPUT_PORT=8080 node src/main.js",
-    "prepare": "husky install",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -26,10 +26,5 @@
   "devDependencies": {
     "@vercel/ncc": "0.34.0",
     "husky": "^8.0.1"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run build"
-    }
   }
 }
