--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
       # Check out https://docs.github.com/en/actions/using-jobs/using-a-matrix-for-your-jobs#expanding-or-adding-matrix-configurations
       # for details on matrix strategies.
       matrix:
-        fail-fast: false
+        continue-on-error: true
         service: [bore.pub, bore.selfhosted, localhost.run]
         include:
           - service: bore.selfhosted
