--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
       # Check out https://docs.github.com/en/actions/using-jobs/using-a-matrix-for-your-jobs#expanding-or-adding-matrix-configurations
       # for details on matrix strategies.
       matrix:
-        service: [bore.pub, bore.selfhosted, localhost.run]
+        service: [bore.pub, bore.selfhosted, bore.selfhosted, localhost.run]
         include:
           - port: 8080
           # Trigger fallback mode.
