--- a/action.yml
+++ b/action.yml
@@ -47,6 +47,6 @@ runs:
     - run: timeout 30s bash -c 'until [ -f /tmp/expose-tunnel/.tunnel-is-ready ]; do sleep 1; echo "Waiting for /tmp/expose-tunnel/.tunnel-is-ready to be ready..."; done;'
       shell: bash
 
-    - run:
+    - run: timeout ${{ inputs.blocking }} sleep 7200
       if: inputs.blocking && inputs.blocking != ""
-      run: timeout ${{ inputs.blocking }} sleep 7200
+      shell: bash
