--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,9 +29,6 @@ jobs:
             secret: secret-value
             selfHostedEndpoint: "localhost"
             port: 8080
-          - service: bore.selfhosted
-            selfHostedEndpoint: "localhost"
-            port: 8080
           # Trigger fallback mode.
           - service: bore.selfhosted
             fallback: '["bore.pub"]'
@@ -59,10 +56,8 @@ jobs:
         run: |
           wget https://github.com/ekzhang/bore/releases/download/v0.4.0/bore-v0.4.0-x86_64-unknown-linux-musl.tar.gz
           tar -xf bore-v0.4.0-x86_64-unknown-linux-musl.tar.gz
-          ./bore server &
+          [[ "${{ matrix.secret }}" != "" ]]; ./bore server --secret ${{ matrix.secret }} & || ./bore server &
           sleep 2
-        env:
-          BORE_SECRET: ${{ matrix.secret }}
 
       - name: Run the 'expose-tunnel' action from the local source
         uses: ./
