--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,7 +56,7 @@ jobs:
         run: |
           wget https://github.com/ekzhang/bore/releases/download/v0.4.0/bore-v0.4.0-x86_64-unknown-linux-musl.tar.gz
           tar -xf bore-v0.4.0-x86_64-unknown-linux-musl.tar.gz
-          [[ "${{ matrix.secret }}" != "" ]]; ./bore server --secret ${{ matrix.secret }} & || ./bore server &
+          [[ "${{ matrix.secret }}" != "" ]] && ./bore server --secret ${{ matrix.secret }} & || ./bore server &
           sleep 2
 
       - name: Run the 'expose-tunnel' action from the local source
