--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
 
+defaults:
+  run:
+    shell: bash # Set the default shell to bash.
+
 jobs:
   test:
     runs-on: ubuntu-latest
